# notebook-mcp-server

./: .gitignore  README.md  pyproject.toml  test_notebook.ipynb
src/notebook_mcp/: __init__.py  server.py
